# rustack

./: .gitignore  .replit  Cargo.toml  README.md  main.rs  peek.html  pop.html  push.html
