[package]
name = "rustack"
version = "0.1.0"
authors = ["thsieh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

[[bin]]
name = "rustack"
path = "main.rs"
